--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,8 +80,8 @@ ul {
 
   &-home {
     background: $bg-image no-repeat center center / cover;
-
     height: 90vh;
+    ;
 
 
 
@@ -307,12 +307,27 @@ ul {
       grid-template-columns: repeat(3, 1fr);
       grid-gap: 2rem;
 
-      p {
+      .recommendation {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .recommendation-text {
         background-color: $medium-color;
         color: set-text-color($medium-color);
-        padding: .75rem;
+        font-weight: bold;
+        padding: 2rem;
+        text-align: center;
         border-radius: 15px;
         margin-bottom: 1rem;
+      }
+
+      img {
+        width: 180px;
+        margin-right: .75rem;
+        border-radius: 50%;
       }
 
       ul {
@@ -320,11 +335,27 @@ ul {
         align-items: center;
 
         li {
-          img {
-            width: 120px;
-            margin-right: .75rem;
-            border-radius: 50%;
+
+          .recommendation-list-person-disc {
+            color: $light-color;
+            cursor: pointer;
+
+            &:hover {
+              border-bottom: 1px $light-color solid;
+              padding-bottom: .15rem;
+            }
+
+            &-name {
+              font-size: 1.5rem;
+            }
+
+            &-work {
+              font-size: 1rem;
+              color: $medium-color;
+            }
           }
+
+
         }
       }
     }
@@ -415,6 +446,7 @@ ul {
 
         &:hover {
           border-color: $main-color;
+
         }
       }
     }
