--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,22 +1,18 @@
 @import "config";
 @import "gallery_grid";
 
-
 * {
   margin: 0;
   padding: 0;
-
 }
 
 body {
   font-family: "Assistant", sans-serif;
   line-height: 1.6;
-
 }
 
 a {
   text-decoration: none;
-
 }
 
 h2,
@@ -40,9 +36,7 @@ ul {
   height: 40px;
 }
 
-
 #main-nav {
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -59,7 +53,7 @@ ul {
   a {
     text-transform: uppercase;
     color: #fff;
-    padding-bottom: .55rem;
+    padding-bottom: 0.55rem;
     border-bottom: 3px transparent solid;
     transition: border-color 0.5s;
 
@@ -70,21 +64,14 @@ ul {
     &:hover {
       border-color: $main-color;
     }
-
   }
 }
 
 // header
 #header {
-
-
   &-home {
     background: $bg-image no-repeat center center / cover;
     height: 90vh;
-    ;
-
-
-
     // head content
     .header-content {
       display: flex;
@@ -96,23 +83,16 @@ ul {
       color: $light-color;
 
       h1 span {
-        margin-right: .55rem;
+        margin-right: 0.55rem;
       }
-
-
     }
-
   }
 
   &-inner {
     background: $bg-image no-repeat 30% 30% / cover;
     height: 15vh;
-
-
   }
 }
-
-
 
 // sections
 
@@ -125,10 +105,9 @@ ul {
       grid-template-columns: repeat(3, 1fr);
       grid-gap: 1rem;
 
-      &>div {
+      & > div {
         padding: 1rem;
         border: 1px solid $main-color;
-
       }
 
       .fas {
@@ -140,7 +119,6 @@ ul {
 
   // b
   &-b {
-
     .stats {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -156,7 +134,6 @@ ul {
 
         &:nth-child(2) {
           background-color: $medium-color;
-
         }
 
         &:last-child {
@@ -164,9 +141,7 @@ ul {
           color: set-text-color($complentary-color2);
           // @include poligon-traingle-left;
         }
-
       }
-
 
       li {
         margin-bottom: 1rem;
@@ -187,13 +162,13 @@ ul {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-gap: 1rem;
-
+      align-items: center;
 
       .step-number {
         background-color: $main-color;
         color: white;
         border-radius: 50%;
-        padding: .75rem 1rem;
+        padding: 0.75rem 1rem;
         position: absolute;
         top: 0;
         right: 0;
@@ -210,7 +185,6 @@ ul {
         position: relative;
 
         &:hover {
-
           background-color: $main-color;
           color: $dark-color;
           font-size: 4rem;
@@ -221,11 +195,7 @@ ul {
             color: $light-color;
           }
         }
-
-
-
       }
-
     }
   }
 }
@@ -234,7 +204,6 @@ ul {
 
 #about {
   &-a {
-
     background-color: $main-color;
 
     .border-bottom-highlight {
@@ -243,10 +212,7 @@ ul {
 
     .biography {
       display: grid;
-      grid-template-areas:
-        "bioimage  bio  bio"
-
-      ;
+      grid-template-areas: "bioimage  bio  bio";
       grid-gap: 1rem;
 
       img {
@@ -262,23 +228,18 @@ ul {
         color: set-text-color($medium-color);
         padding: 1rem;
         grid-area: bio;
-
+        line-height: 2.5;
+        font-size: 1.1rem;
         h3 {
-          margin-bottom: .75rem;
+          margin-bottom: 0.75rem;
           font-size: 1.5rem;
         }
       }
-
     }
-
-
   }
 
   // section b
   &-b {
-
-
-
     .progress {
       background-color: $medium-color;
       height: 20px;
@@ -289,8 +250,6 @@ ul {
         background-color: $main-color;
         height: 100%;
         border-radius: 15px;
-
-
       }
     }
   }
@@ -306,6 +265,7 @@ ul {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-gap: 2rem;
+      align-items: center;
 
       .recommendation {
         display: flex;
@@ -326,23 +286,30 @@ ul {
 
       img {
         width: 180px;
-        margin-right: .75rem;
+        margin-right: 0.75rem;
         border-radius: 50%;
       }
 
       ul {
         display: flex;
+
         align-items: center;
 
         li {
-
           .recommendation-list-person-disc {
             color: $light-color;
             cursor: pointer;
 
+            &:last-child {
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+            }
+
             &:hover {
               border-bottom: 1px $light-color solid;
-              padding-bottom: .15rem;
+              padding-bottom: 0.15rem;
             }
 
             &-name {
@@ -354,29 +321,25 @@ ul {
               color: $medium-color;
             }
           }
-
-
         }
       }
     }
   }
-
 }
 
 #contact {
   background-color: $light-color;
-
 
   h2 {
     font-weight: 100;
   }
 
   .contact-form {
-
     display: grid;
-    grid-template-areas: 'name name email email'
-      'subject subject phone phone'
-      'massage massage massage massage';
+    grid-template-areas:
+      "name name email email"
+      "subject subject phone phone"
+      "massage massage massage massage";
     grid-gap: 1rem;
   }
 
@@ -402,12 +365,10 @@ ul {
 
   input {
     padding: 1rem;
-
   }
 
   input[type="submit"] {
     grid-column: 1 / span 4;
-
   }
 
   textarea {
@@ -417,7 +378,6 @@ ul {
   .captcha {
     display: block;
   }
-
 }
 
 #main-footer {
@@ -429,7 +389,6 @@ ul {
   padding: 1.5rem;
   height: 5rem;
 
-
   ul {
     display: flex;
 
@@ -440,20 +399,18 @@ ul {
         color: $light-color;
         font-size: 1.5rem;
         border: 2px solid white;
-        padding: .55rem .75rem;
+        padding: 0.55rem 0.75rem;
         border-radius: 50%;
         transition: border-color 0.5s;
 
         &:hover {
           border-color: $main-color;
-
         }
       }
     }
   }
 
   // section c
-
 }
 
 @import "media";
