css function and border for edoyod

--- a/scss/main.css
+++ b/scss/main.css
@@ -68,17 +68,17 @@
 
 .bg-main {
   background-color: #ffbc00;
-  color: set-text-color(#ffbc00);
+  color: #f4f4f4;
 }
 
 .bg-light-color {
   background-color: #f4f4f4;
-  color: set-text-color(#f4f4f4);
+  color: #333;
 }
 
 .bg-dark-color {
   background-color: #333;
-  color: set-text-color(#333);
+  color: #f4f4f4;
 }
 
 .border-bottom-highlight {
@@ -574,7 +574,8 @@ ul {
 }
 
 #about-c .edoyot ul li .recommendation-list-person-disc {
-  color: #f4f4f4;
+  color: black;
+  border-bottom: 1px transparent solid;
   cursor: pointer;
 }
 
@@ -595,8 +596,7 @@ ul {
 }
 
 #about-c .edoyot ul li .recommendation-list-person-disc:hover {
-  border-bottom: 1px #f4f4f4 solid;
-  padding-bottom: 0.15rem;
+  border-color: black;
 }
 
 #about-c .edoyot ul li .recommendation-list-person-disc-name {
