--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -14,6 +14,13 @@ $dark-color: #333;
 $bg-image: url(https://images.unsplash.com/photo-1529528744093-6f8abeee511d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);
 
 // utilities
+@function set-text-color($background-color) {
+  @if (lightness($background-color) >50) {
+    @return $dark-color;
+  } @else {
+    @return $light-color;
+  }
+}
 
 .txt-marker {
   border-right: solid 1px #ccc;
