--- a/scss/main.css
+++ b/scss/main.css
@@ -26,7 +26,7 @@
 }
 
 .py-4 {
-  padding: 4rem 0;
+  padding: 5rem 0;
 }
 
 .my-1 {
@@ -286,16 +286,19 @@ ul {
 }
 
 #main-nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-top: 1rem;
+  padding: 1rem 1rem;
+  z-index: 5;
 }
 
 #main-nav ul {
@@ -323,6 +326,12 @@ ul {
 
 #main-nav a:hover {
   border-color: #ffbc00;
+}
+
+#main-nav.scrolled {
+  background-color: rgba(3, 3, 3, 0.728);
+  -webkit-transition: all 1000ms;
+  transition: all 1000ms;
 }
 
 #header-home {
