--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -11,7 +11,8 @@ $complentary-color2: #87a2ff;
 $light-color: #f4f4f4;
 $medium-color: #ccc;
 $dark-color: #333;
-$bg-image: url(https://images.unsplash.com/photo-1529528744093-6f8abeee511d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);
+// $bg-image: url(https://images.unsplash.com/photo-1529528744093-6f8abeee511d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80);
+$bg-image: url("/dist/img/profilePic.jpg");
 
 // utilities
 @function set-text-color($background-color) {
