--- a/scss/main.css
+++ b/scss/main.css
@@ -297,8 +297,14 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1rem 1rem;
+  padding-top: 1rem;
   z-index: 5;
+}
+
+#main-nav.scrolled {
+  background-color: rgba(0, 0, 0, 0.755);
+  -webkit-transition: background-color 1s;
+  transition: background-color 1s;
 }
 
 #main-nav ul {
@@ -328,14 +334,12 @@ ul {
   border-color: #ffbc00;
 }
 
-#main-nav.scrolled {
-  background-color: rgba(3, 3, 3, 0.728);
-  -webkit-transition: all 1000ms;
-  transition: all 1000ms;
-}
-
 #header-home {
-  background: url(https://images.unsplash.com/photo-1529528744093-6f8abeee511d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80) no-repeat center center/cover;
+  background: -webkit-gradient(linear, left bottom, left top, from(#00000078), to(rgba(67, 67, 67, 0.455))), url("/dist/img/profilePic.jpg");
+  background: linear-gradient(to top, #00000078, rgba(67, 67, 67, 0.455)), url("/dist/img/profilePic.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 90vh;
 }
 
@@ -363,7 +367,7 @@ ul {
 }
 
 #header-inner {
-  background: url(https://images.unsplash.com/photo-1529528744093-6f8abeee511d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80) no-repeat 30% 30%/cover;
+  background: url("/dist/img/profilePic.jpg") no-repeat 30% 30%/cover;
   height: 15vh;
 }
 
@@ -373,10 +377,6 @@ ul {
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
-}
-
-#home-a .my-spicealztion .lead {
-  font-size: 1rem;
 }
 
 #home-a .my-spicealztion > div {
@@ -461,6 +461,7 @@ ul {
 #home-c .process .step-icon:hover {
   background-color: #ffbc00;
   color: #333;
+  font-size: 4rem;
   -webkit-transition: all 1s ease-out;
   transition: all 1s ease-out;
 }
@@ -526,8 +527,8 @@ ul {
 }
 
 #about-c {
-  background-color: white;
-  color: #333;
+  background-color: #3b56b3;
+  color: #f4f4f4;
 }
 
 #about-c .edoyot {
@@ -583,8 +584,7 @@ ul {
 }
 
 #about-c .edoyot ul li .recommendation-list-person-disc {
-  color: black;
-  border-bottom: 1px transparent solid;
+  color: #f4f4f4;
   cursor: pointer;
 }
 
@@ -605,7 +605,8 @@ ul {
 }
 
 #about-c .edoyot ul li .recommendation-list-person-disc:hover {
-  border-color: black;
+  border-bottom: 1px #f4f4f4 solid;
+  padding-bottom: 0.15rem;
 }
 
 #about-c .edoyot ul li .recommendation-list-person-disc-name {
