--- a/scss/main.scss
+++ b/scss/main.scss
@@ -78,8 +78,12 @@ ul {
 // header
 #header {
   &-home {
-    background: linear-gradient(to top, #00000078, rgba(67, 67, 67, 0.455)),
-      $bg-image;
+    background-image: linear-gradient(
+        to top,
+        #00000078,
+        rgba(67, 67, 67, 0.455)
+      ),
+      url("../img/profilePic.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
