--- a/scss/main.scss
+++ b/scss/main.scss
@@ -87,7 +87,7 @@ ul {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100;
+    height: 100vh;
     // head content
 
     .header-content {
