--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,7 +48,7 @@ ul {
 
   &.scrolled {
     background-color: rgba(0, 0, 0, 0.755);
-    transition: background-color 1s;
+    transition: background-color 0.5s;
   }
   ul {
     display: flex;
@@ -257,6 +257,9 @@ ul {
 
   // section b
   &-b {
+    .container {
+      max-width: 700px;
+    }
     .progress {
       background-color: $medium-color;
       height: 20px;
