changed edoyoed tp background color

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -8,6 +8,7 @@ $body-background: #fff;
 $main-color: #ffbc00;
 $complentary-color1: #3b56b3;
 $complentary-color2: #87a2ff;
+$complentary-color3: #c2cfff;
 $light-color: #f4f4f4;
 $medium-color: #ccc;
 $dark-color: #333;
