--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -159,6 +159,16 @@ $bg-image: url("/dist/img/profilePic.jpg");
   }
 }
 
+.hide {
+  opacity: 0;
+  transform: translateY(10%);
+}
+.show {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: all 0.5s ease-in-out;
+}
+
 button[class*="btn-"]:hover,
 a[class*="btn-"]:hover,
 input[class*="btn-"]:hover {
