--- a/scss/main.scss
+++ b/scss/main.scss
@@ -219,6 +219,11 @@ ul {
 
 // about page
 
+section {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: all 0.5s ease-in-out;
+}
 #about {
   &-a {
     background-color: $main-color;
