--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,11 +15,11 @@ a {
   text-decoration: none;
 }
 
-h2,
-h3,
-h4 {
-  text-transform: uppercase;
-}
+// h2,
+// h3,
+// h4 {
+//   // text-transform: uppercase;
+// }
 
 img {
   width: 100%;
@@ -59,7 +59,7 @@ ul {
   }
 
   a {
-    text-transform: uppercase;
+    // text-transform: uppercase;
     color: #fff;
     padding-bottom: 0.55rem;
     border-bottom: 3px transparent solid;
