--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,11 +83,11 @@ ul {
         #00000078,
         rgba(67, 67, 67, 0.455)
       ),
-      url("../img/profilePic.jpg");
+      url("https://wallpapercave.com/wp/wp6784383.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: 60vh;
     // head content
 
     .header-content {
