--- a/scss/_gallery_grid.scss
+++ b/scss/_gallery_grid.scss
@@ -61,33 +61,36 @@
     transition: opacity 500ms cubic-bezier(0.4, 1, 0.3, 1),
       transform 500ms cubic-bezier(0.4, 1, 0.3, 1);
     text-align: center;
-  }
 
-  &-text-title {
-    font-size: 2rem;
-    font-weight: 100;
+    &-title {
+      font-size: 2rem;
+      font-weight: 100;
 
-    &-link {
-      text-decoration: none;
-      color: white;
-      border-bottom: solid 1px transparent;
+      &-link {
+        text-decoration: underline;
+        color: black;
+        font-size: 1.5rem;
 
-      &:hover {
-        color: $dark-color;
-        border-color: black;
-        letter-spacing: 0.3rem;
-        transition: all 0.7s;
+        &:hover {
+          color: $dark-color;
+
+          letter-spacing: 0.3rem;
+          transition: all 0.7s;
+        }
       }
     }
-  }
+    &-broad {
+      font-size: 1.3rem;
+      text-transform: center;
+      max-width: 70%;
+      margin: 0 auto;
+    }
 
-  &-text-category {
-    font-weight: 50;
-    font-size: 1.5rem;
-  }
-
-  &-text-description {
-    margin-top: 2rem;
+    &-tools {
+      font-size: 0.8rem;
+      color: black;
+      margin-top: 2rem;
+    }
   }
 
   &:last-child {
